<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StudentPortal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent" >



        <com.google.android.material.appbar.AppBarLayout
            app:liftOnScroll="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:id="@+id/v_top_appbar"
                android:layout_width="match_parent"
                app:menu="@menu/appmenu"
                app:title="Catalog"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_height="?attr/actionBarSize"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/v_tab"
                app:tabTextColor="@color/white"
                app:tabIndicatorColor="@color/white"
                android:layout_width="match_parent"
                app:tabBackground="@color/purple_500"
                app:tabSelectedTextColor="@color/white"
                android:layout_height="wrap_content">


                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:text="@string/home"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:text="@string/enroll"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.tabs.TabItem
                    android:text="@string/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </com.google.android.material.tabs.TabLayout>


            <!--            app:navigationIcon="@drawable/menu_white_24dp"-->

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/v_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
